--- a/tydying_Data_in_R.html
+++ b/tydying_Data_in_R.html
@@ -197,7 +197,7 @@ catch_df$catch_thousands[i]</code></pre>
 <p>[1] “I”</p>
 <ol style="list-style-type: decimal">
 <li>turn “I” into 1 in the catch_thousands column</li>
-<li>covers catch_thousands into integer type</li>
+<li>coerce catch_thousands into integer type</li>
 <li>convert catch_thousands to catch</li>
 </ol>
 <pre class="r"><code>catch_df &lt;- catch_df %&gt;%
@@ -213,6 +213,152 @@ tail(catch_df)</code></pre>
 ## 8538    NOP 1995    Chum              99  99000
 ## 8539    NOP 1996    Chum              68  68000
 ## 8540    NOP 1997    Chum              97  97000</code></pre>
+<div id="split-apply-combine" class="section level1">
+<h1>Split-Apply-Combine</h1>
+<pre class="r"><code>catch_summarized &lt;- catch_df %&gt;%
+  group_by(Region) %&gt;%
+  summarise(mean_catch = mean(catch))
+
+head(catch_summarized)</code></pre>
+<pre><code>## # A tibble: 6 x 2
+##   Region mean_catch
+##   &lt;chr&gt;       &lt;dbl&gt;
+## 1 ALU        40384.
+## 2 BER        16373.
+## 3 BRB      2709796.
+## 4 CHG       315487.
+## 5 CKI       683571.
+## 6 COP       179223.</code></pre>
+<pre class="r"><code>catch_mean &lt;- catch_df %&gt;%
+  group_by(Region) %&gt;%
+  summarise(catch_mean = mean(catch), catch_stdev = sd(catch))
+
+head(catch_mean)</code></pre>
+<pre><code>## # A tibble: 6 x 3
+##   Region catch_mean catch_stdev
+##   &lt;chr&gt;       &lt;dbl&gt;       &lt;dbl&gt;
+## 1 ALU        40384.     223402.
+## 2 BER        16373.      41542.
+## 3 BRB      2709796.    6554344.
+## 4 CHG       315487.     508517.
+## 5 CKI       683571.    1089900.
+## 6 COP       179223.     337259.</code></pre>
+<pre class="r"><code>catch_mean &lt;- catch_df %&gt;%
+  group_by(Region) %&gt;%
+  # calculate mean, sd, n
+  summarise(catch_mean = mean(catch, na.rm = T), 
+            catch_stdev = sd(catch, na.rm = T), 
+            num_obs = n())
+
+head(catch_mean)</code></pre>
+<pre><code>## # A tibble: 6 x 4
+##   Region catch_mean catch_stdev num_obs
+##   &lt;chr&gt;       &lt;dbl&gt;       &lt;dbl&gt;   &lt;int&gt;
+## 1 ALU        40384.     223402.     435
+## 2 BER        16373.      41542.     510
+## 3 BRB      2709796.    6554344.     570
+## 4 CHG       315487.     508517.     550
+## 5 CKI       683571.    1089900.     525
+## 6 COP       179223.     337259.     470</code></pre>
+<pre class="r"><code>catch_mean &lt;- catch_df %&gt;%
+  group_by(Region, species) %&gt;%
+  # calculate mean, sd, n
+  summarise(catch_mean = mean(catch, na.rm = T), 
+            catch_stdev = sd(catch, na.rm = T), 
+            num_obs = n())
+
+head(catch_mean)</code></pre>
+<pre><code>## # A tibble: 6 x 5
+## # Groups:   Region [2]
+##   Region species catch_mean catch_stdev num_obs
+##   &lt;chr&gt;  &lt;chr&gt;        &lt;dbl&gt;       &lt;dbl&gt;   &lt;int&gt;
+## 1 ALU    Chinook       23.0        214.      87
+## 2 ALU    Chum        2908.       11362.      87
+## 3 ALU    Coho         195.         729.      87
+## 4 ALU    Pink      191954.      471615.      87
+## 5 ALU    Sockeye     6839.       15187.      87
+## 6 BER    Chinook       19.6        139.     102</code></pre>
+<pre class="r"><code>catch_mean &lt;- catch_df %&gt;%
+  group_by(Region, species) %&gt;%
+  # calculate mean, sd, n
+  summarise(catch_mean = mean(catch, na.rm = T), 
+            catch_stdev = sd(catch, na.rm = T), 
+            num_obs = n()) %&gt;% 
+  # fileter for Chinook
+  filter(species == &quot;Chinook&quot;) %&gt;% 
+  filter(catch_mean &gt; 2000)
+
+head(catch_mean)</code></pre>
+<pre><code>## # A tibble: 6 x 5
+## # Groups:   Region [6]
+##   Region species catch_mean catch_stdev num_obs
+##   &lt;chr&gt;  &lt;chr&gt;        &lt;dbl&gt;       &lt;dbl&gt;   &lt;int&gt;
+## 1 BRB    Chinook     76211.      52222.     114
+## 2 CKI    Chinook     43876.      33859.     105
+## 3 COP    Chinook     19798.      14352.      94
+## 4 GSE    Chinook     31927.      65438.      82
+## 5 KOD    Chinook      3164.       6164.     116
+## 6 KSK    Chinook     21918.      26476.      85</code></pre>
+<pre class="r"><code>catch_year &lt;- catch_df %&gt;%
+  filter(Year &gt; 1990 &amp; species == &quot;Chinook&quot;) %&gt;% 
+  # filter(Year &gt; 1990 | Year &lt; 1900) %&gt;% 
+  group_by(Year, species) %&gt;%
+  # calculate mean, sd, n
+  summarise(catch_sum = sum(catch))
+
+print(catch_year)</code></pre>
+<pre><code>## # A tibble: 7 x 3
+## # Groups:   Year [?]
+##    Year species catch_sum
+##   &lt;int&gt; &lt;chr&gt;       &lt;dbl&gt;
+## 1  1991 Chinook    611000
+## 2  1992 Chinook    605000
+## 3  1993 Chinook    672000
+## 4  1994 Chinook    633000
+## 5  1995 Chinook    626000
+## 6  1996 Chinook    544000
+## 7  1997 Chinook    548000</code></pre>
+<p>Reading region_defs data from website</p>
+<pre class="r"><code>region_defs &lt;- read.csv(url(&quot;https://knb.ecoinformatics.org/knb/d1/mn/v2/object/df35b.303.1&quot;, method = &quot;libcurl&quot;),
+                        stringsAsFactors = FALSE)
+head(region_defs)</code></pre>
+<pre><code>##      code                                  mgmtArea areaClass regionCode
+## 1     GSE              Unallocated Southeast Alaska  mgmtArea          1
+## 2     NSE                 Northern Southeast Alaska  mgmtArea          1
+## 3     SSE                 Southern Southeast Alaska  mgmtArea          1
+## 4     YAK                                   Yakutat  mgmtArea          1
+## 5 PWSmgmt      Prince William Sound Management Area  mgmtArea          2
+## 6     BER Bering River Subarea Copper River Subarea   subarea          2
+##                                                                                                                                                                                     notes
+## 1                                                            Included are Southeastern Alaska catches which could not be assigned\nto Northern or Southern Southeastern Alaska or Yakutat
+## 2 Northern Southern Alaska includes Districts 9 through 16 from summer straight northwest to and including the fairweather Grounds but excludes Yakutat fisheries unless otherwise noted.
+## 3                                                                                                                                                                                        
+## 4                                                                                                                                                                                        
+## 5                                                                                                            Includes the Bering River and Copper River and Prince William Sound Subareas
+## 6</code></pre>
+<pre class="r"><code>region_defs &lt;- region_defs %&gt;% 
+  select(code, mgmtArea)
+
+  head(region_defs)</code></pre>
+<pre><code>##      code                                  mgmtArea
+## 1     GSE              Unallocated Southeast Alaska
+## 2     NSE                 Northern Southeast Alaska
+## 3     SSE                 Southern Southeast Alaska
+## 4     YAK                                   Yakutat
+## 5 PWSmgmt      Prince William Sound Management Area
+## 6     BER Bering River Subarea Copper River Subarea</code></pre>
+<p>Merging two different files (catch_df and region_defs) based on Region and code columns, which contain the same information.. So the merged file has Region, and the code is removed/replacced.</p>
+<pre class="r"><code>catch_joined &lt;- left_join(catch_df, region_defs, by = c(&quot;Region&quot; = &quot;code&quot;))
+
+head(catch_joined)</code></pre>
+<pre><code>##   Region Year species catch_thousands catch                  mgmtArea
+## 1    SSE 1886 Chinook               0     0 Southern Southeast Alaska
+## 2    SSE 1887 Chinook               0     0 Southern Southeast Alaska
+## 3    SSE 1888 Chinook               0     0 Southern Southeast Alaska
+## 4    SSE 1889 Chinook               0     0 Southern Southeast Alaska
+## 5    SSE 1890 Chinook               0     0 Southern Southeast Alaska
+## 6    SSE 1891 Chinook               0     0 Southern Southeast Alaska</code></pre>
+</div>
 
 
 
